Ajout de la photo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const projects = (await getCollection('work'))
 					alt="Mateo Zoughebi portrait"
 					width="600"
 					height="760"
-					src="/assets/portrait.jpg"
+					src="/assets/profile-pic.png"
 				/>
 			</header>
 
